# pwssite

./: .gitignore  DS_STORE_CLEANUP_INSTRUCTIONS.md  README.md  copy.bash  copy.py  cup19.html  index.html  index_e.html  make.bash  make.py  pyproject.toml  q  requirements.txt  style.css
.circleci/: config.yml  フォルダごと削除予定
.claude/: settings.json
2019/: README.md  cup19-party.html  cup19.html  cup19_e.html  cup19_presentation.html  cup19_presentation_e.html  index.html  index_e.html  pwscup19.html  results_final.xlsx  results_preliminary.xlsx  study19.html  template.html
2020/: PWSMeetUp.html  cup20.html  cup20_e.html  entry.html  entry_e.html  index.html  index_e.html  lecture20.html  privacy_policy.html  privacy_policy_e.html  session.html  session_e.html  study20-2.html  study20.html  tmp.html
2021/: Nhanes.html  cup21.html  cup21_e.html  entry.html  entry_e.html  index.html  index_e.html  privacy_policy.html  privacy_policy_e.html  session_e.html  study21.html
2022/: cup22.html  cup22_e.html  entry.html  entry_e.html  index.html  index_e.html  meetup.html  privacy_policy.html  privacy_policy_e.html  session.html  session_e.html  style.css
2023/: cup-guideline.html  cup23.html  cup23_e.html  entry.html  index.html  index_e.html  privacy_policy.html
2024/: MeetUp2025.html  cup24.html  entry.html  index.html  index_e.html  privacy_policy.html  style.css
2025/: MeetUP2026.html  cup25.html  index.html  privacy_policy.html  pws2025_session_report.html
2026/: cup26.html  index.html  style.css  test.html
about/: README.md  cases.json  cases.schema.json  (+1 more)
(+233 files in other folders)
